# smcprime

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
docs/: benchmark_plot.py
src/: demography.rs  lib.rs  simulations.rs
tests/: test_smcprime.py
