[package]
name = "smc_prime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smc_prime"
crate-type = ["cdylib"]

[dependencies]
enterpolation = "0.3.0"
ordered-float = "5.3.0"
proptest = "1.11.0"
pyo3 = "0.27.0"
rand = "0.10.0"
rand_distr = "0.6.0"
thiserror = "2.0.18"
tskit = { version = "0.15.0-alpha.4", features = ["derive", "bindings"], git = "https://github.com/tskit-dev/tskit-rust" }
