[package]
name = "smc_prime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smc_prime"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"


[dependencies]
arrayvec = "0.7.6"
ordered-float = "5.3.0"
pyo3 = "0.28.3"
rand = "0.10.0"
rand_distr = "0.6.0"
thiserror = "2.0.18"
tskit = { version = "0.15.0", features = ["derive", "bindings"] }
tskit2tskit = "0.1.0-alpha.0"

[dev-dependencies]
proptest = "1.11.0"
