[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "smc_prime"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "ipython>=8.12.3",
    "joblib>=1.4.2",
    "marimo>=0.8.22",
    "msprime>=1.3.1",
    "tqdm>=4.67.3",
    "tskit>=0.5.7",
]
