[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "smc_prime"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "hypothesis>=6.113.0",
    "scipy>=1.10.1",
    "tskit>=0.5.7",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.12.3",
    "joblib>=1.4.2",
    "marimo>=0.8.22",
    "matplotlib>=3.7.5",
    "msprime>=1.3.1",
    "tqdm>=4.67.3",
]
